--- a/JFXProject/bin/com/mnr/jfxproject/sample.fxml
+++ b/JFXProject/bin/com/mnr/jfxproject/sample.fxml
@@ -8,22 +8,30 @@
 
 <GridPane fx:controller="com.mnr.jfxproject.Controller"
 	xmlns:fx="http://javafx.com/fxml" alignment="center"
-	hgap="10" vgap="10" >
+	hgap="10" vgap="10"
+	style="-fx-font-family: Papyrus;
+			-fx-alignment: center;
+			-fx-hgap: 10;
+			-fx-vgap:10;" >
 	
 	<Text text="Sup"
 		GridPane.rowIndex="0"
 		GridPane.columnSpan="2"
-		GridPane.halignment="CENTER" />
+		GridPane.halignment="CENTER"
+			style="-fx-font-size:80px; -fx-fill:AQUA;"
+			/>
 	
 	<Label text="First Name:"
 		GridPane.rowIndex="1"
 		GridPane.columnIndex="0" />
-	
-	<TextField
+	<!-- firstName variable in Controller class -->
+	<TextField fx:id="firstName"
 		GridPane.rowIndex="1"
 		GridPane.columnIndex="1"/>
-	
+		
+	<!-- #handleSaySup method from Controller class -->
 	<Button text="Say Sup!!"
+		onAction="#handleSaySup"
 		GridPane.rowIndex="2"
 		GridPane.columnIndex="1"
 		GridPane.halignment="RIGHT" />
