--- a/PomodoroJavaFXApp/resources/css/main.css
+++ b/PomodoroJavaFXApp/resources/css/main.css
@@ -11,7 +11,6 @@
     -fx-spacing: 20px;
 }
 
-
 #title {
     -fx-font-size: 31px;
 }
@@ -21,9 +20,9 @@
     -fx-pref-width: 350px;
     -fx-background-color: #202428;
     -fx-font-size: 72px;
-   /* -fx-line-height: 80px;*/
+    -fx-line-height: 80px;
     -fx-border-radius: 8px;
-    /*-fx-letter-spacing: 10px;*/
+    -fx-letter-spacing: 10px;
 }
 
 .buttons {
@@ -37,7 +36,7 @@
   -fx-border-color: #fff;
   -fx-background-color: none;
   -fx-text-fill: #fff;
-  /*-fx-fill-width: true;*/
+  -fx-fill-width: true;
   -fx-cursor: pointer;
   -fx-padding: 10px 10px 10px 37px;
   -fx-font-size: 20px;
@@ -60,13 +59,13 @@
 
 .svg {
     -fx-fill: #fff;
-   /* -fx-height: 15px;*/
+    -fx-height: 15px;
 }
 
 
 .text-area {
     -fx-pref-width: 300px;
-    /*-fx-pref-row-count: 3;*/
+    -fx-pref-row-count: 3;
     -fx-border-radius: 6px;
     -fx-border-width: 2px;
     -fx-border-color: #fff;
@@ -103,5 +102,5 @@
 }
 
 #pomodoro {
-    /*-fx-fit-height: 34px;*/
+    -fx-fit-height: 34px;
 }
