--- a/PomodoroJavaFXApp/resources/fxml/home.fxml
+++ b/PomodoroJavaFXApp/resources/fxml/home.fxml
@@ -14,9 +14,9 @@
     
     	<Button fx:id="DEBUG" onAction="#DEBUG">DUBUG</Button>
 
-        <Label fx:id="title" text="Pomodoro"/>
+        <Label fx:id="title" text="Pomodoro" />
 
-        <Label fx:id="time" text="00:00"/>
+        <Label fx:id="time" text="${controller.timeText}"/>
 
         <HBox styleClass="buttons">
             <children>
